<resources>
    <!-- Activity titles -->
    <string name="app_name">Know Your Meds</string>
    <string name="title_about">About</string>
    <string name="title_license">License</string>

    <!-- Admob -->
    <string name="admob_app_id">ca-app-pub-1411804566429951~5595893420</string>
    <string name="admob_main_banner">ca-app-pub-1411804566429951/7072626626</string>
    <string name="admob_main_interstitial">ca-app-pub-1411804566429951/2363225428</string>
    <string name="admob_med_banner">ca-app-pub-1411804566429951/3560757024</string>
    <string name="admob_spl_banner">ca-app-pub-1411804566429951/8289531021</string>

    <string name="default_content_description">Content Description</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <!-- Main Screen -->
    <string name="favorites">Favorites</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="recent">Recent</string>
    <string name="no_suggestions">No items found for %1$s.</string>
    <string name="search_empty">Search string is empty.</string>
    <string name="no_items">No entries yet</string>
    <string name="search_hint">Medicine name</string>
    <string name="process_search">Searching&#8230;</string>
    <string name="search_results">Result</string>
    <string name="suggestions_results">Suggestions for %1$s</string>
    <string name="fetch_details">Gathering all available information.\nThis may take a while
        depending on the genericity of the item&#8230;\n\nIf search is taking too much time,
        consider disabling Marketed Drug Search in Settings</string>
    <string name="tty_no_items">No %1$s available</string>
    <string name="source_no_items">No sources available</string>

    <!-- Dialog messages -->
    <string name="not_available_offline">Entry is not available in offline mode</string>
    <string name="delete_recent_message">Are you sure you want to delete the recent list?</string>
    <string name="delete_favorite_message">Are you sure you want to delete the favorite list?</string>
    <string name="add_to_favorites">%1$s was added to favorites.</string>
    <string name="toast_no_internet">No Internet Connection</string>
    <string name="search_item_message">Do you want to search for %1$s?</string>

    <!-- Control -->
    <string name="control_delete">Delete</string>
    <string name="control_cancel">Cancel</string>
    <string name="control_ok">OK</string>
    <string name="control_understand">I understand</string>
    <string name="control_enable">Enable</string>
    <string name="control_disable">Disable</string>
    <string name="control_empty_cache">Empty Cache</string>
    <string name="control_select">&lt;Select item here&gt;</string>
    <string name="control_search">Search</string>

    <!-- Menu titles -->
    <string name="menu_favorite">Add to favorites</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="menu_disclaimer">Disclaimer</string>
    <string name="menu_license">License</string>

    <!-- Tab titles -->
    <string name="tab_properties">Properties</string>
    <string name="tab_sources">Sources</string>
    <string name="tab_brands">Brand Names</string>
    <string name="tab_info">MedlinePlus</string>
    <string name="tab_scdc">Clinical Drug Component</string>
    <string name="tab_sbdc">Branded Drug Component</string>
    <string name="tab_sbdg">Branded Dose Form Group</string>
    <string name="tab_scd">Clinical Drug or Pack</string>
    <string name="tab_scdg">Clinical Dose Form Group</string>
    <string name="tab_sbd">Branded Drug or Pack</string>
    <string name="tab_exit">Return to Search</string>
    <string name="tab_interaction">Interactions</string>

    <!-- Properties -->
    <string name="property_prescribable_yes">Prescribable</string>
    <string name="property_prescribable_no">Not prescribable</string>
    <string name="property_brands">Brand Name</string>
    <string name="property_ingredient">Ingredient</string>
    <string name="property_spl">Marketed Drugs</string>

    <!-- About -->
    <string name="version">Version %1$s</string>
    <string name="copyright">Copyright 2016, Tompee. All rights reserved.</string>
    <string name="nlm_message">This product uses publicly available data from the U.S. National
        Library of Medicine (NLM), National Institutes of Health, Department of Health and Human
        Services; NLM is not responsible for the product and does not endorse or recommend this or
        any other product.</string>

    <!-- Disclaimer -->
    <string name="disclaimer_message_app">This product uses publicly available data from the U.S. National
        Library of Medicine (NLM), National Institutes of Health, Department of Health and Human
        Services; NLM is not responsible for the product and does not endorse or recommend this or
        any other product.\n\nThis application is intended for educational purposes only
        and is not a substitute for professional medical advice. The use of this application and the
        information provided is at your own risk.</string>
    <string name="disclaimer_title_nlm">NLM Disclaimer</string>
    <string name="disclaimer_message_nlm">It is not the intention of NLM to provide specific
        medical advice, but rather to provide users with information to better understand their
        health and their medications. NLM urges you to consult with a qualified physician for
        advice about medications.</string>
    <string name="disclaimer_title_drug_bank">DrugBank Disclaimer</string>
    <string name="disclaimer_message_drug_bank">DrugBank is intended for educational and scientific
        research purposes only and you expressly acknowledge and agree that use of DrugBank is at
        your sole risk. The accuracy of DrugBank information is not guaranteed and reliance on
        DrugBank shall be at your sole risk. DrugBank is not intended as a substitute for
        professional medical advice, diagnosis or treatment..[www.drugbank.ca]</string>
    <string name="disclaimer_title_citing_drug_bank">Citing DrugBank</string>
    <string name="disclaimer_message_citing_drug_bank">Wishart DS, Knox C, Guo AC, Shrivastava S,
        Hassanali M, Stothard P, Chang Z, Woolsey J. DrugBank: a comprehensive resource for in
        silico drug discovery and exploration. Nucleic Acids Res. 2006 Jan 1;34(Database
        issue):D668-72. 16381955.</string>

    <!-- Settings -->
    <string name="settings_offline_mode_title">Offline Mode</string>
    <string name="settings_offline_mode_message">Offline mode allows you to view cached items
        even without internet connection.\n\nIn offline mode, Search feature will lookup on cached
        list only.\n\nNote: Data in offline mode maybe outdated and some features may not
        be available.</string>
    <string name="settings_show_recent">Show recent searches</string>
    <string name="settings_spl_support_title">Marketed Drug Search</string>
    recent searches even without internet connection.\n\nIn offline mode, Search feature will
    <string name="settings_spl_support_message">Enabling Marketed Drug search may take considerable
        amount of time depending on the genericity of item.</string>
    <string name="settings_cache_title">Clear cache</string>
    <string name="settings_cache_message">Cache contains all previously viewed items. Clearing
        this will affect the features of offline mode.</string>

    <!-- License -->
    <string name="license_app_title">Application Icon</string>
    <string name="license_app_title_message">Medical graphic by Freepik from Flaticon\nThree
        graphic by Freepik from Flaticon\nHealth Clinic by Freepik from Flaticon\nMedical graphic
        by Madebyoliver from Flaticon\nHealthy graphic by Madebyoliver from Flaticon\nMedical
        graphic by Vectors Market from Flaticon\nHealthy graphic by Darius Dan from Flaticon\n\nAll
        icons are licensed under Creative Commons BY 3.0.\nMade with Logo Maker.
    </string>

    <!-- List headers -->
    <string name="header_name">Name</string>
    <string name="header_prescribable">Prescribable</string>
    <string name="header_tty">Term Type</string>

    <!-- App rater -->
    <string name="ids_title_rate">Rate this app</string>
    <string name="ids_message_rate">Did you enjoy learning about your meds? If yes, would you
        mind for a moment to rate this app? Thank you so much for your support!</string>
    <string name="ids_lbl_remind">Remind me later</string>
    <string name="ids_lbl_no_rate">No Thanks</string>
    <string name="ids_lbl_yes_rate">Rate now</string>

</resources>
