<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_white"
        android:showAsAction="ifRoom"
        android:title="@string/settings"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_disclaimer"
        android:title="@string/menu_disclaimer"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_policy"
        android:title="@string/menu_policy"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_license"
        android:title="@string/menu_license"
        app:showAsAction="never" />
</menu>