<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/list_item_margin"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:text="@string/header_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dark_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/header_prescribable"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dark_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:text="@string/header_tty"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dark_text" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_secondary_text" />

</LinearLayout>