<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/ListViewHeaderTextStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/settings" />

    <RelativeLayout
        android:id="@+id/offline_mode"
        style="@style/ListViewStyle"
        android:background="@drawable/selector_list_full_border_background"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/offline_mode_cb"
            style="@style/ListViewIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:buttonTint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/offline_mode_cb"
            android:layout_toStartOf="@id/offline_mode_cb"
            android:orientation="vertical">

            <TextView
                style="@style/ListViewSingleTextStyle"
                android:text="@string/settings_offline_mode_title" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/spl_support"
        style="@style/ListViewStyle"
        android:background="@drawable/selector_list_bottom_border_background"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/spl_support_cb"
            style="@style/ListViewIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:buttonTint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/spl_support_cb"
            android:layout_toStartOf="@id/spl_support_cb"
            android:orientation="vertical">

            <TextView
                style="@style/ListViewSingleTextStyle"
                android:text="@string/settings_spl_support_title" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cache"
        style="@style/ListViewStyle"
        android:background="@drawable/selector_list_bottom_border_background"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                style="@style/ListViewSingleTextStyle"
                android:text="@string/settings_cache_title" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/recent_visibility"
        style="@style/ListViewStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/selector_list_full_border_background"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/recent_cb"
            style="@style/ListViewIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:buttonTint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/recent_cb"
            android:layout_toStartOf="@id/recent_cb"
            android:orientation="vertical">

            <TextView
                style="@style/ListViewSingleTextStyle"
                android:text="@string/settings_show_recent" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>