<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/search_margin"
        android:layout_marginLeft="@dimen/search_margin"
        android:layout_marginRight="@dimen/search_margin"
        android:layout_marginTop="@dimen/search_margin"
        android:layout_weight="0.4"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/search_horizontal_padding"
                android:layout_marginStart="@dimen/search_horizontal_padding"
                android:layout_marginTop="@dimen/search_vertical_padding"
                android:text="@string/favorites"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="@dimen/search_horizontal_padding"
                android:layout_marginLeft="@dimen/search_horizontal_padding"
                android:layout_marginRight="@dimen/search_horizontal_padding"
                android:layout_marginStart="@dimen/search_horizontal_padding"
                android:layout_marginTop="4dp"
                android:background="@color/dark_secondary_text" />

            <ListView
                android:id="@+id/list_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/search_vertical_padding"
                android:layout_marginEnd="@dimen/search_horizontal_padding"
                android:layout_marginLeft="@dimen/search_horizontal_padding"
                android:layout_marginRight="@dimen/search_horizontal_padding"
                android:layout_marginStart="@dimen/search_horizontal_padding"
                android:divider="@android:color/transparent"
                android:minHeight="@dimen/list_view_height" />

            <TextView
                android:id="@+id/fave_no_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="@dimen/list_view_height"
                android:text="@string/no_items"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/dark_text"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/search_margin"
        android:layout_marginLeft="@dimen/search_margin"
        android:layout_marginRight="@dimen/search_margin"
        android:layout_marginTop="@dimen/search_margin"
        android:layout_weight="0.4"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/search_horizontal_padding"
                android:layout_marginStart="@dimen/search_horizontal_padding"
                android:layout_marginTop="@dimen/search_vertical_padding"
                android:text="@string/recent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="@dimen/search_horizontal_padding"
                android:layout_marginLeft="@dimen/search_horizontal_padding"
                android:layout_marginRight="@dimen/search_horizontal_padding"
                android:layout_marginStart="@dimen/search_horizontal_padding"
                android:layout_marginTop="4dp"
                android:background="@color/dark_secondary_text" />

            <ListView
                android:id="@+id/recent_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/search_vertical_padding"
                android:layout_marginEnd="@dimen/search_horizontal_padding"
                android:layout_marginLeft="@dimen/search_horizontal_padding"
                android:layout_marginRight="@dimen/search_horizontal_padding"
                android:layout_marginStart="@dimen/search_horizontal_padding"
                android:divider="@android:color/transparent"
                android:minHeight="@dimen/list_view_height" />

            <TextView
                android:id="@+id/recent_no_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="@dimen/list_view_height"
                android:text="@string/no_items"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/dark_text"
                android:visibility="gone" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>